<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10px"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3498db"
        android:padding="5px"
        android:text="@string/txt_nome"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/edNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3498db"
        android:padding="5px"
        android:text="@string/txt_sexo"
        android:textColor="#ffffff" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_masc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_masc_txt" />

        <RadioButton
            android:id="@+id/radio_fem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_fem_txt" />
    </RadioGroup>

    <!-- Botões -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/btExibir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="exibir"
            android:text="@string/bt_exibir_text" />

        <Button
            android:id="@+id/btLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="limpar"
            android:text="@string/bt_limpar_txt" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tabela"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15px"
         >

 <!--      <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >


            <TextView
                android:id="@+id/nome_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="10pt" />

            <TextView
                android:id="@+id/result_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="10pt" />
        </TableRow>

      <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/sexo_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="10pt" />

            <TextView
                android:id="@+id/result_sexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="10pt" />
        </TableRow> -->
    </TableLayout>

    <Button
        android:id="@+id/ver_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ver data e hora"
        android:onClick="verData" />

</LinearLayout>